--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <div class="products"></div>
     </main>
 
+    <script src="src/ProductList.js"></script>
+    <script src="src/ProductItem.js"></script>
+    <script src="src/Cart.js"></script>
+    <script src="src/CartItem.js"></script>
+
     <script src="src/main.js"></script>
 
 </body>
