--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
 
     <header>
         <button class="btn-cart" type="button">Корзина</button>
+        <div class="cart-wrp">
+            <div class="cart-block">
+                <div>
+                    <span class="cart-item-name">Наименование</span>
+                    <span class="cart-item-price">Цена</span>
+                    <span class="cart-item-quantity">Кол-во</span>
+                </div>
+
+                <div class="cart"></div>
+
+                <div class="cart-btnsAll">
+                    <button class="btn-cart-block btn-cart-block-buy" type="submit" value="Submit">Купить</button>
+                    <button class="btn-cart-block btn-cart-block-close">Закрыть</button>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <div class="products"></div>
