--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <span class="cart-item-name">Наименование</span>
                     <span class="cart-item-price">Цена</span>
                     <span class="cart-item-quantity">Кол-во</span>
+                    <span class="cart-item-summ">Итого</span>
                 </div>
 
                 <div class="cart"></div>
