--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
                 <div class="cart-btnsAll">
                     <button class="btn-cart-block btn-cart-block-buy" type="submit" value="Submit">Купить</button>
+                    <span class="cart-rezult"></span>
                     <button class="btn-cart-block btn-cart-block-close">Закрыть</button>
                 </div>
             </div>
