--- a/index.html
+++ b/index.html
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
+    <title>Интернет-магазин</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>JS_2</title>
 </head>
-
 <body>
-
     <header>
-        <button class="btn-cart" type="button">Корзина</button>
-        <div class="cart-wrp">
-            <div class="cart-block">
-                <div>
-                    <span class="cart-item-name">Наименование</span>
-                    <span class="cart-item-price">Цена</span>
-                    <span class="cart-item-quantity">Кол-во</span>
-                    <span class="cart-item-summ">Итого</span>
-                </div>
-
-                <div class="cart"></div>
-
-                <div class="cart-btnsAll">
-                    <button class="btn-cart-block btn-cart-block-buy" type="submit" value="Submit">Купить</button>
-                    <span class="cart-rezult"></span>
-                    <button class="btn-cart-block btn-cart-block-close">Закрыть</button>
-                </div>
-            </div>
+        <div class="logo">E-shop</div>
+        <div class="cart">
+            <form action="#" class="search-form">
+                <input type="text" class="search-field">
+                <button class="btn-search" type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
+            </form>
+            <button class="btn-cart" type="button">Корзина</button>
+            <div class="cart-block invisible"></div>
         </div>
     </header>
     <main>
         <div class="products"></div>
     </main>
-
-    <script src="src/ProductList.js"></script>
-    <script src="src/ProductItem.js"></script>
-    <script src="src/Cart.js"></script>
-    <script src="src/CartItem.js"></script>
-
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
     <script src="src/main.js"></script>
-
 </body>
-
 </html>
+
+<!--<div class="cart-item" data-id="${this.id_product}">-->
+    <!--<div class="product-bio">-->
+        <!--<img src="${this.img}" alt="Some image">-->
+        <!--<div class="product-desc">-->
+            <!--<p class="product-title">${this.product_name}</p>-->
+            <!--<p class="product-quantity">Quantity: ${this.quantity}</p>-->
+            <!--<p class="product-single-price">$${this.price} each</p>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="right-block">-->
+        <!--<p class="product-price">${this.quantity*this.price}</p>-->
+        <!--<button class="del-btn" data-id="${this.id_product}">&times;</button>-->
+    <!--</div>-->
+<!--</div>-->
