--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="logo">E-shop</div>
         <div class="cart">
             <form action="#" class="search-form">
-                <input type="text" class="search-field">
-                <button class="btn-search" type="submit">
+                <input type="text" class="search-field" v-model='searchLine'>
+                <button class="btn-search" type="submit" v-on:click="filterGoods">
                     <i class="fas fa-search"></i>
                 </button>
             </form>
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="products">
-            <div class="product-item" v-for="product of products" :key="product.id_product">
+            <div class="product-item" v-for="product of products" :key="product.id_product" :data-id="product.id_product">
                 <img :src="imgCatalog" alt="Some img">
                 <div class="desc">
                     <h3>{{product.product_name}}</h3>
