--- a/index.html
+++ b/index.html
@@ -1,59 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<div id="app">
-    <header>
-        <div class="logo">E-shop</div>
-        <div class="cart">
-            <form action="#" class="search-form">
-                <input type="text" class="search-field" v-model='searchLine'>
-                <button class="btn-search" type="submit" v-on:click="filterGoods">
-                    <i class="fas fa-search"></i>
-                </button>
-            </form>
+    <div id="app">
+        <header>
+            <div class="logo">E-shop</div>
+            <div class="cart">
+                <form action="#" class="search-form">
+                    <input type="text" class="search-field" v-model='searchLine'>
+                    <button class="btn-search" type="submit" v-on:click="filterGoods">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>
 
-            <button class="btn-cart" type="button" v-on:click="isCartVisible = !isCartVisible">Корзина</button>
-            <div v-if="isCartVisible" class="cart-block"></div>
-            <div v-else="isCartVisible" class="cart-block invisible"></div>
+                <button class="btn-cart" type="button" v-on:click="isCartVisible = !isCartVisible">Корзина</button>
+                <div v-if="isCartVisible" class="cart-block">
+                    <div class="cart-item" v-for="product of itemsInCart" :key="product.product_name"
+                        :data-name="product.product_name">
+                        <!-- <img :src="imgCatalog" alt="Some img"> -->
+                        <!-- <div class="product-bio"> -->
+                        <p class="product-desc">{{ product.product_name }}</p>
+                        <p class="product-single-price">{{ product.price }} $</p>
+                        <p class="product-quantity">{{ product.quantity }}</p>
+                        <p class="product-price">{{ product.price * product.quantity }} $</p>
+                        <button class="buy-btn" @click="addProduct(product)">+</button>
+                        <!-- </div> -->
+                    </div>
+                </div>
+                <div v-else="isCartVisible" class="cart-block invisible"></div>
 
-        </div>
-    </header>
-    <main>
-        <div class="products">
-            <div class="product-item" v-for="product of products" :key="product.id_product" :data-id="product.id_product">
-                <img :src="imgCatalog" alt="Some img">
-                <div class="desc">
-                    <h3>{{product.product_name}}</h3>
-                    <p>{{product.price}} $</p>
-                    <button class="buy-btn" @click="addProduct(product)">Купить</button>
+            </div>
+        </header>
+        <main>
+            <div class="products">
+                <div class="product-item" v-for="product of products" :key="product.id_product"
+                    :data-id="product.id_product">
+                    <img :src="imgCatalog" alt="Some img">
+                    <div class="desc">
+                        <h3>{{product.product_name}}</h3>
+                        <p>{{product.price}} $</p>
+                        <button class="buy-btn" @click="addProduct(product)">Купить</button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
-</div>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+        </main>
+    </div>
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+        integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
+        crossorigin="anonymous"></script>
     <script src="src/vue.js"></script>
     <script src="src/main.js"></script>
 </body>
+
 </html>
 
 <!--<div class="cart-item" data-id="${this.id_product}">-->
-    <!--<div class="product-bio">-->
-        <!--<img src="${this.img}" alt="Some image">-->
-        <!--<div class="product-desc">-->
-            <!--<p class="product-title">${this.product_name}</p>-->
-            <!--<p class="product-quantity">Quantity: ${this.quantity}</p>-->
-            <!--<p class="product-single-price">$${this.price} each</p>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="right-block">-->
-        <!--<p class="product-price">${this.quantity*this.price}</p>-->
-        <!--<button class="del-btn" data-id="${this.id_product}">&times;</button>-->
-    <!--</div>-->
+<!--<div class="product-bio">-->
+<!--<img src="${this.img}" alt="Some image">-->
+<!--<div class="product-desc">-->
+<!--<p class="product-title">${this.product_name}</p>-->
+<!--<p class="product-quantity">Quantity: ${this.quantity}</p>-->
+<!--<p class="product-single-price">$${this.price} each</p>-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="right-block">-->
+<!--<p class="product-price">${this.quantity*this.price}</p>-->
+<!--<button class="del-btn" data-id="${this.id_product}">&times;</button>-->
+<!--</div>-->
 <!--</div>-->
