--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         <div class="logo"><i class="fas fa-laptop"></i></div>
         <div class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla blandit rutrum porttitor. Phasellus eget mi euismod nulla porttitor pellentesque eget cursus mi. Maecenas ut augue pulvinar, maximus lectus a, egestas erat. Integer ullamcorper sed lorem et aliquam. Nam at nunc nec massa egestas suscipit sed eu eros. Nam ac neque eget nulla vulputate dapibus et non orci. Sed et aliquet leo, ac cursus ligula. Etiam vitae lacus tortor. Morbi dictum ornare magna, in hendrerit mauris accumsan id. Praesent lacinia tincidunt pellentesque. Vivamus vitae urna sagittis, ultrices ex ac, facilisis dolor. Aliquam et ipsum condimentum, convallis urna eget, commodo sapien. Quisque sed quam eget augue posuere sollicitudin. Nunc sit amet lectus eu eros scelerisque vehicula.</div>
         <div class="cart">
+            <p class="cart-text">Vivamus ante odio, tempor eget nunc in, posuere finibus tortor. Vivamus facilisis mollis malesuada. Praesent tempus, sapien sit amet sodales imperdiet.</p>
 
             <filter-el></filter-el>
             <cart ref="cart"></cart>
