--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,17 @@
         <div class="footer-map">
             <img src="img/Map.jpg" alt="map">
         </div>
-        <div class="footer-social"></div>
+        <div class="footer-social">
+            <p class="footer-social-text">
+                <i class="fab fa-twitter-square"></i>@our_twitter
+            </p>
+            <p class="footer-social-text">
+                <i class="fab fa-facebook"></i>fb.com/our_shop
+            </p>
+            <p class="footer-social-text">
+                <i class="fas fa-at"></i>our@shop.com
+            </p>
+        </div>
     </footer>
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
         integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
